--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
   "devDependencies": {
     "@testing-library/jest-dom": "^6.4.8",
     "@types/jest": "^29.5.12",
+    "@types/jsonwebtoken": "^9.0.6",
     "@types/supertest": "^6.0.2",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
